--- a/space_app/app/assets/stylesheets/welcome.css.scss
+++ b/space_app/app/assets/stylesheets/welcome.css.scss
@@ -3,4 +3,16 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   font-family: futura, arial, sans-serif;
+  color: white;
+  background-color: black
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+  font-size: 3em;
 }
