--- a/space_app/app/views/welcome/index.html.erb
+++ b/space_app/app/views/welcome/index.html.erb
@@ -1,8 +1,13 @@
-<h1>Hey Space Nerd</h1>
+<div class="container">
+  <h1>Hey Space Nerd</h1>
 
-<h2>The weather is great on Mars today!</h2>
-<h3>I've been here <%= @weather_report.sol %> Martian days</h3>
-<h3>That's <%= @weather_report.days %> Earth days</h3>
-<h3><%= @weather_report.atmosphere %></h3>
-<h3>High today: <%= @weather_report.max_temp %>&#176 Fahrenheit</h3>
-<h3>Low today: <%= @weather_report.min_temp %>&#176 Fahrenheit</h3>
+  <h2>The weather is great on Mars today!</h2>
+
+  <h2>Greetings from the Curiosity Rover.</h2>
+  
+  <h3>I've been here <%= @weather_report.sol %> Martian days</h3>
+  <h3>That's <%= @weather_report.days %> Earth days</h3>
+  <h3><%= @weather_report.atmosphere %></h3>
+  <h3>High today: <%= @weather_report.max_temp %>&#176 Fahrenheit</h3>
+  <h3>Low today: <%= @weather_report.min_temp %>&#176 Fahrenheit</h3>
+</div>
