moved nebulae image and added styling

--- a/space_app/app/views/welcome/index.html.erb
+++ b/space_app/app/views/welcome/index.html.erb
@@ -1,10 +1,13 @@
 <div class="container">
-  <h1>Hey Space Nerd</h1>
+  <header>
+    <h1>Hey Space Nerd</h1>
+  </header>
+
 
   <h2>The weather is great on Mars today!</h2>
 
   <h2>Greetings from the Curiosity Rover.</h2>
-  
+
   <h3>I've been here <%= @weather_report.sol %> Martian days</h3>
   <h3>That's <%= @weather_report.days %> Earth days</h3>
   <h3><%= @weather_report.atmosphere %></h3>
