--- a/space_app/app/assets/stylesheets/welcome.css.scss
+++ b/space_app/app/assets/stylesheets/welcome.css.scss
@@ -4,12 +4,20 @@
 body {
   font-family: futura, arial, sans-serif;
   color: white;
-  background-color: black
+  background-image: url("/nebulae.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .container {
-  width: 80%;
+  // width: 80%;
   margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+header {
+  height: 200px;
+  padding: 10% 0;
 }
 
 h1 {
