--- a/space_app/app/assets/stylesheets/welcome.css.scss
+++ b/space_app/app/assets/stylesheets/welcome.css.scss
@@ -4,23 +4,35 @@
 body {
   font-family: futura, arial, sans-serif;
   color: white;
-  background-image: url("/nebulae.jpg");
-  background-repeat: no-repeat;
-  background-size: 100%;
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.45),
+      rgba(0, 0, 0, 0.45)
+    ), url("/nebulae.jpg") no-repeat, 100% 100%;
+  background-size: cover;
+
 }
 
 .container {
-  // width: 80%;
-  margin: 0 auto;
-  background-color: rgba(0, 0, 0, 0.3);
+  margin: 0;
 }
 
 header {
   height: 200px;
-  padding: 10% 0;
+  padding: 10% 20px;
+}
+header h2 {
+  text-align: center;
 }
 
 h1 {
   text-align: center;
   font-size: 3em;
+}
+
+
+//MEDIA QUERY FOR SMALL SCREEN
+@media screen and (max-width: 450px) {
+    header {
+      height: 260px;
+    }
 }
