--- a/space_app/app/views/welcome/index.html.erb
+++ b/space_app/app/views/welcome/index.html.erb
@@ -4,13 +4,15 @@
     <h2>Greetings from the Curiosity Rover</h2>
   </header>
 
+  <div class="block rover">
+    <h2>The weather is great on Mars today!</h2>
+    <h3>I've been here <%= @weather_report.sol %> Martian days.</h3>
+    <h3>That's <%= @weather_report.days %> Earth days.</h3>
+  </div>
 
-  <h2>The weather is great on Mars today!</h2>
-
-
-  <h3>I've been here <%= @weather_report.sol %> Martian days.</h3>
-  <h3>That's <%= @weather_report.days %> Earth days.</h3>
-  <h3><%= @weather_report.atmosphere %></h3>
-  <h3>High today: <%= @weather_report.max_temp %>&#176 Fahrenheit</h3>
-  <h3>Low today: <%= @weather_report.min_temp %>&#176 Fahrenheit</h3>
+  <div class="block weather">
+    <h3><%= @weather_report.atmosphere %></h3>
+    <h3>High today: <%= @weather_report.max_temp %>&#176 Fahrenheit</h3>
+    <h3>Low today: <%= @weather_report.min_temp %>&#176 Fahrenheit</h3>
+  </div>
 </div>
