pre parallax attempt

--- a/space_app/app/assets/stylesheets/welcome.css.scss
+++ b/space_app/app/assets/stylesheets/welcome.css.scss
@@ -7,7 +7,7 @@ body {
   background: linear-gradient(
       rgba(0, 0, 0, 0.45),
       rgba(0, 0, 0, 0.45)
-    ), url("/nebulae.jpg") no-repeat, 100% 100%;
+    ), url("/nebulae.jpg") no-repeat, 100% 100%, fixed;
   background-size: cover;
 
 }
