--- a/space_app/app/assets/stylesheets/welcome.css.scss
+++ b/space_app/app/assets/stylesheets/welcome.css.scss
@@ -1,6 +1,8 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
 body {
   font-family: futura, arial, sans-serif;
   color: white;
@@ -9,15 +11,21 @@ body {
       rgba(0, 0, 0, 0.45)
     ), url("/nebulae.jpg") no-repeat, 100% 100%, fixed;
   background-size: cover;
+  background-attachment: fixed;
+}
 
+a {
+  color: white;
 }
 
 .container {
   margin: 0;
 }
 
+// HEADER
+
 header {
-  height: 200px;
+  height: 100vh;
   padding: 10% 20px;
 }
 header h2 {
@@ -29,6 +37,28 @@ h1 {
   font-size: 3em;
 }
 
+h1, h2, h3 {
+  font-weight: normal;
+}
+
+.down-arrow {
+  width: 75px;
+  height: 75px;
+  margin: 200px auto;
+  border: 3px solid white;
+  border-radius: 100%;
+  position: relative;
+}
+
+.down-arrow:hover {
+  box-shadow: 0px 0px 10px white;
+  background-color: rgba(0, 0, 0, 0.4)
+}
+.down-arrow p{
+  position: absolute;
+  margin: 35% 25%;
+  text-align: center;
+}
 //ROVER BLOCK
 .block {
   margin: 0;
@@ -37,14 +67,37 @@ h1 {
 
 .rover {
   background-color: rgba(76, 1, 38, 0.7);
+  height: 400px;
 }
 
+.left {
+  display: block;
+  float: left;
+}
+
+.right {
+  display: block;
+  float: right;
+}
+.right img {
+  height: 300px;
+  width: 300px;
+  margin: 50px 50px;
+}
+// WEATHER BLOCK
 .weather {
+  clear: both;
   background-color: rgba(4, 23, 46, 0.7);
+
 }
 //MEDIA QUERY FOR SMALL SCREEN
 @media screen and (max-width: 450px) {
-    header {
-      height: 260px;
+
+    .down-arrow {
+      margin: 110px auto;
+    }
+    .right img {
+      margin: 0 auto;
+      float: none;
     }
 }
