--- a/space_app/app/views/welcome/index.html.erb
+++ b/space_app/app/views/welcome/index.html.erb
@@ -2,12 +2,24 @@
   <header>
     <h1>Hey Space Nerd</h1>
     <h2>Greetings from the Curiosity Rover</h2>
+    <a href="#content">
+      <div class="down-arrow">
+        <p>
+          scroll
+        </p>
+      </div>
+    </a>
   </header>
 
-  <div class="block rover">
-    <h2>Hello!</h2>
-    <h3>I've been here <%= @weather_report.sol %> Martian days.</h3>
-    <h3>That's about <%= @weather_report.days %> Earth days.</h3>
+  <div class="block rover" id="content">
+    <div class="left">
+      <h2>Hello!</h2>
+      <h3>I've been here <%= @weather_report.sol %> Martian days.</h3>
+      <h3>That's about <%= @weather_report.days %> Earth days.</h3>
+    </div>
+    <div class="right">
+      <%= image_tag "mars.png" %>
+    </div>
   </div>
 
   <div class="block weather">
